# master-project

./: .gitmodules  README.md
arduino/loadcell/: loadcell.ino
c++/: .gitignore  CMakeLists.txt  README.md  gpm.cpp  gpm.h  gpm.hpp  main.cpp  pybind11_example.cpp
c++/cmake/: FindEigen3.cmake  FindRL.cmake
c++/include/: gpm.hpp  loadKinematicModel.hpp  pointer_example.hpp  yumi.hpp
c++/models/urdf/: yumi_left.urdf  yumi_left_original.urdf  yumi_right.urdf  yumi_right_original.urdf
c++/src/: README.md  gpm.cpp  loadKinematicModel.cpp  main.cpp  myYumi.xml  pointer_example.cpp  py2gpmbind.cpp  yumi.cpp
c++/src/IRB14000_rev01_STEP_j/vrmlFiles/: robot.xml
c++/src/urdf/: yumi.gv  yumi_left.urdf  yumi_right.urdf
cad/: adapter_left.3mf  adapter_left.stl  adapter_right.stl  adapter_right_v2.3mf  adapter_right_v2.stl  adapters.3mf  adpater_left.FCStd  adpater_left.FCStd1  adpater_right.FCStd  adpater_right.FCStd1  adpater_right_v2.FCStd  adpater_right_v2.FCStd1  srew.3mf  srew.FCStd  srew.FCStd1  srew.stl
preprocessing/: genPaths.py
python/: .gitignore  README.md  requirements.txt  setup.cfg  test.py  test2.py  test_c++pointer.py
python/abb_egm_pyclient/: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
python/abb_egm_pyclient/abb_egm_pyclient/: __init__.py  atomic_counter.py  egm_client.py  main_program.py
python/abb_egm_pyclient/abb_egm_pyclient/feedback/: control.py  control_final.py  control_realSensor.py  control_virtualSensor.py  stateMachine.py
python/abb_egm_pyclient/abb_egm_pyclient/feedforward/: main_program.py
python/abb_egm_pyclient/abb_egm_pyclient/feedforward_offline/: send2robot.py
python/abb_egm_pyclient/abb_egm_pyclient/feedforward_online/: send2robot.py
python/abb_egm_pyclient/abb_egm_pyclient/run/: __main__.py  print_egm_feedback.py  send_configuration.py  send_pose.py
python/data/: get_data.py
python/experiment/: plots.py
python/optimizeTaskSpacePlacement/: checkManipulabiltyMeasure.py
python/plots/control_position/: plotting.py
python/plots/control_positionv2/: plotting.py
python/plots/cutting/: plotting.py
python/plots/force_control/: plotting.py
python/plots/force_controlv2/: plottingv2.py
python/plots/ik_tuning/: plotting.py
python/plots/postprocessing/: plotting.py
python/plots/preprocessing/: plotting.py
python/plots/step_response/: plotting.py
python/plots/taskSpacePlacement/: plotting.py
python/preprocessing/: gcode.txt  gcode_test.txt  genPaths.py
python/serial_interface/: readSerial.py
python/taskspace_placement/: computeJoints.py  computeJoints_left.py  taskspace_placement.py
